# datalife

./: .gitignore  .gitmodules  CMakeLists.txt  DISCLAIMER  LICENSE  README-Install.md  README-License.txt  README.md
analysis_scripts/: detailed_VOLVFD_Graph_SimAgg.ipynb
analysis_scripts/old_scripts/: analyze.py  old_io_vol_vfd.ipynb
evaluation_scripts/1000genome/: README.md  deception_1kgenome_parallel_shm.sbatch  deception_1kgenome_parallel_ssd.sbatch  deception_stage_nfs_1kgenome_parallel_shm.sbatch  deception_stage_nfs_1kgenome_parallel_ssd.sbatch  deception_stage_pfs_1kgenome_parallel_shm.sbatch  deception_stage_pfs_1kgenome_parallel_ssd.sbatch
evaluation_scripts/1000genome_DLG/: 1000genome_caterpillar_tree.html  1000genome_critical_path.html  replicas.yml  sites.yml  transformations.yml
evaluation_scripts/1000genome_generic/: 1kgenome_10nodes_nfs_pfs.sbatch  1kgenome_15nodes_nfs_pfs.sbatch  README.md
evaluation_scripts/1000genome_generic/1kgenome_bin/: frequency_shm.py  frequency_ssd.py  individuals_merge.py  individuals_shm.py  mutation_overlap_ssd.py
evaluation_scripts/1000genome_perf_number/: 1kgenome_10nodes_shm_ssd_nfs_pfs_staging.sbatch  1kgenome_15nodes_nfs_pfs.sbatch  README.md
evaluation_scripts/1000genome_plot/: 1kgenome_plot.ipynb
evaluation_scripts/DFL/1000genome_DFL/: README.md
evaluation_scripts/DFL/DDMD_DFGL/: ddmd_workflow_360k.yml
evaluation_scripts/ddmd/: README.md  ddmd_bgfs_shm_cosch.sbatch  ddmd_bgfs_ssd_cosch.sbatch  ddmd_nfs.sbatch
evaluation_scripts/seismic_DLG/: README.md
flow-analysis/: CMakeLists.txt  datalife-analyze  setup.py
flow-analysis/src/: analyze.py  datalife-analyze.py  datalife.py  requirements.txt  sankeydata.py
flow-monitor/: CMakeLists.txt  README.md  datalife-run  potential_issue.md
flow-monitor/inc/: AtomicHelper.h  BoundedCache.h  Cache.h  CacheStats.h  CacheTypes.h  Config.h  Connection.h  ConnectionPool.h  DeltaPrefetcher.h  FcntlCache.h  FcntlReaderWriterLock.h  FileCache.h  FileCacheRegister.h  FilelockCache.h  Histogram.h  Lib.h  LocalFileCache.h  Loggable.h  Message.h  MonitorFile.h  MonitorFileDescriptor.h  MonitorFileStream.h  NetworkCache.h  PerfectPrefetcher.h  Prefetcher.h  PriorityThreadPool.h  RSocketAdapter.h  ReaderWriterLock.h  Request.h  ScalableAllocator.h  ScalableCache.h  ScalableMetaData.h  SharedMemoryCache.h  ThreadPool.h  Timer.h  TrackFile.h  Trackable.h  UnboundedCache.h  UnixIO.h  UrlCache.h  (+6 more)
flow-monitor/src/: CMakeLists.txt  Cache.cpp  CacheStats.cpp  Connection.cpp  ConnectionPool.cpp  FileCacheRegister.cpp  Lib.cpp  Loggable.cpp  Message.cpp  MonitorFile.cpp  MonitorFileDescriptor.cpp  MonitorFileStream.cpp  Prefetcher.cpp  PriorityThreadPool.cpp  RSocketAdapter.cpp  ReaderWriterLock.cpp  Request.cpp  SharedMemoryCache.cpp  ThreadPool.cpp  Timer.cpp  TrackFile.cpp
hdf5-datalife/: CMakeLists.txt  COPYING  README.md  load_tracker_deps.sh
hdf5-datalife/analysis_scripts/: grouped_VOLVFD_Graph_SimAgg.ipynb  io_vol_vfd.ipynb
hdf5-datalife/analysis_scripts/old_scripts/: io_diagram.py  sankey_PTVOL_Sim_Agg.ipynb  seq_acc_report.py
hdf5-datalife/example_stat/: note.md
hdf5-datalife/example_stat/ddmd_12p4s/: 25184_vfd-data-stat-dl-agg.yaml  ddmd_12p4s-task_to_file.yaml  note.md  vfd-4s-ddmd_12p4s-sankey-labeled.html  vfd-4s-ddmd_12p4s-sankey.html
hdf5-datalife/example_stat/wrf_pyflextrkr/: 44025_vfd-data-stat-dl.yaml  44025_vol-data-stat-dl.yaml  README.md  seq9f10s-task_to_file.yaml  vfd-10s-seq9f10s-sankey-labeled.html  vfd-10s-seq9f10s-sankey.html  vfd-9s-seq9f9s-sankey-labeled.html  vfd-9s-seq9f9s-sankey.html  vol-2s-seq9f9s-sankey.html
hdf5-datalife/flow_analysis/: VFD_stat_to_Sankey.ipynb  VOL_stat_to_Sankey.ipynb  dayu_logo.ipynb  detailed_VOLVFD_Graph_SimAgg.ipynb  grouped_VOLVFD_Graph_SimAgg.ipynb  io_vol_vfd.ipynb  profi_stat.ipynb  vol-log-note.md
hdf5-datalife/flow_analysis/old_scripts/: Sankey_Example_for_Simulation_and_Aggregator.ipynb  sankey_HermesVFD_Sim_Agg.ipynb  sankey_VOLVFD_SimAgg.ipynb  sankey_VOLVFD_test_SimAgg.ipynb
hdf5-datalife/placement_schema/: VFD_stat_to_prefetcher.ipynb
hdf5-datalife/sankey_diagram/detailed_graph/: sankey-sampled-agg-vol-vfd.html  sankey-sampled-sim_w-vol-vfd-.html  sankey-sampled-sim_w_agg_r_w-vol-vfd.html
hdf5-datalife/src/utils/md5/: md5.c
hdf5-datalife/src/vfd/: CMakeLists.txt  H5FD_tracker_vfd.cc  H5FD_tracker_vfd.h  H5FD_tracker_vfd_err.h  H5FD_tracker_vfd_log.h  H5private.h  README.md  TODO.md
hdf5-datalife/src/vol/: CMakeLists.txt  README.md  note.md  tracker_vol.h  tracker_vol_int.h  tracker_vol_new.c  tracker_vol_types.h
hdf5-datalife/test/: 74365_vfd-data-stat-dl.yaml  TODO.md  example_test.py  h5_write_read.py  run_test.sh
mytest/: README.md  datalife_analysis.py  io_test.py  monitor_timer.14100.datalife.json  test_datalife_param.sh  test_hdf5.sh  test_io_file.txt.14100.r_blk_trace.json  test_io_file.txt.14100.w_blk_trace.json  vlen_h5_write.py
mytest/wfcommonstest/: seism_workflow.py  seismology-workflow.json  seismology-workflow.json.txt  test_datalife_param.sh
sankey_diagram/: README.md
sankey_diagram/group_graph/: sankey-grouped-agg-vol-vfd.html  sankey-grouped-sim-vol-vfd-.html  sankey-grouped-sim_agg-vol-vfd.html
scripts/: caterpillar_forest.ipynb  dag_to_shell.py
scripts/caterpillar-scheduling/: cforest-1000genomes.ipynb  dflg-caterpillar-1000genomes-fictitous.ipynb
scripts/ctree_decomposition/: 1k_genomes.gpickle  cforest-1000genomes.ipynb  radical_pst_1kgenome.yml
src/: README.md  caterpillar.py  datalife.py  requirements.txt  sankeydata.py
tools/tests/: Makefile  fio_test  fio_test.c  io_test  io_test.c  test_datalife_param.sh  test_hdf5.sh  vlen_h5_read2.py
tutorials/caterpillar-scheduling/: 1kgenome-2chrs.gpickle  caterpillar_forest.ipynb  dflg-caterpillar-1000genomes.ipynb
tutorials/dag_to_sh_conversion/: README.md
tutorials/evaluation_scripts/: README.md
tutorials/fastflow-slurm/: README.md  nodenames.sh  srasearch-cpop-16nodes.slurm  srasearch-dfman-16nodes.slurm  srasearch-fastflow-16nodes.slurm  srasearch-metis-16nodes.slurm
(+4101 files in other folders)
